# grimoire

./: .gitignore  README.md  index.html  package-lock.json  package.json  paste-rs-api.md  vite.config.ts  vitest.config.ts  wdio.conf.mjs
.github/workflows/: ci.yml  e2e.yml  release.yml
e2e/: catalog.test.mjs  install.test.mjs  mock-server.mjs  smoke.test.mjs  static-server.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/addon/: installer.rs  manifest.rs  mod.rs
src-tauri/src/commands/: addons.rs  catalog.rs  install.rs  mod.rs  settings.rs  sharing.rs  updates.rs
src-tauri/src/config/: api_version.rs  dirs.rs  mod.rs  paths.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/esoui/: api.rs  models.rs
src-tauri/src/resolver/: mod.rs
src-tauri/tests/: integration.rs
src/components/: AddonCard.test.tsx  AddonCard.tsx  AppUpdateBanner.tsx  BBCodeDescription.errorBoundary.test.tsx  BBCodeDescription.test.tsx  BBCodeDescription.tsx  BootstrapModal.tsx  CatalogCard.test.tsx  CatalogCard.tsx  ErrorOverlay.test.tsx  ErrorOverlay.tsx  ExportModal.tsx  ExternalLinkIcon.tsx  FolderIcon.tsx  ImportModal.tsx  OrphanedLibsPanel.tsx  SuccessOverlay.test.tsx  SuccessOverlay.tsx  SyncModal.tsx  UpdatesBanner.tsx
src/hooks/: useAddonMetadata.test.ts  useAddonMetadata.ts  useStalenessSettings.ts
src/pages/: BrowsePage.tsx  InstalledPage.tsx  SettingsPage.tsx
src/types/: addon.ts
src/utils/: apiCompatibility.test.ts  apiCompatibility.ts  formatDate.test.ts  formatDate.ts  staleness.test.ts  staleness.ts
